Added Optifine and Tinker's Construct

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -26,8 +26,10 @@ general {
             B:JEI=false
             B:NotEnoughItems=false
             B:ccl-entityhook=false
+            B:mantle=false
             B:mcp=false
             B:mercurius_updater=false
+            B:tconstruct=false
         }
 
     }
